--- a/index.html
+++ b/index.html
@@ -332,13 +332,13 @@ SINGAPORE 529509
 <br>Exit C of Tampines MRT Station (EW2) / Exit F of Tampines MRT Station (DT32)
 <br><br>
 <b>By Bus:</b> 
-<br>Bus Stop Number <i>75009</i> – Tampines Bus Interchange
+<br>Bus Stop Number <i>75009</i> Â– Tampines Bus Interchange
 <br><i>3, 4, 8, 10, 19, 20, 22, 23, 28, 29, 31, 37, 38, 46, 65, 67, 68, 69, 72, 81, 127, 291, 292, 293, 969</i>
 <br>
-<br>Bus Stop Number <i>76131</i> – UOB Tampines Central
+<br>Bus Stop Number <i>76131</i> Â– UOB Tampines Central
 <br><i>2N, 3, 15, 21, 27, 129, 168, 298, NR7</i>
 <br>
-<br>Bus Stop Number <i>76149</i> – Opposite Century Square
+<br>Bus Stop Number <i>76149</i> Â– Opposite Century Square
 <br><i>3, 15, 21, 27, 129, 168, 298</i>
 <br><br>
 <b>By Car:</b> 
